# chat

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/chat/: client.py  server.py
